Can view details for matches. Navigation added.

--- a/doc/TODO
+++ b/doc/TODO
@@ -1,2 +1,1 @@
-IDEAS:
-- Add validators for the add match in admin panel. Making sure that enough points are input.
+- Validate queen field better, needs to check for divided by 4.
