Rating calculator backend added

--- a/doc/TODO
+++ b/doc/TODO
@@ -6,3 +6,4 @@ TODO
 - Filter round stats by number of players in game.
 - Allow navigation between result inputs with keyboard arrows. up, down, left, right.
 - Verify that filter works on mobile.
+- Use a ripple effect PlayerResult rating resetter, instead of a RESET ALL NEWER RESULTS megareset.
