Rating wont crash if zero matches

--- a/doc/TODO
+++ b/doc/TODO
@@ -9,3 +9,4 @@ TODO
 - Use a ripple effect PlayerResult rating resetter, instead of a RESET ALL NEWER RESULTS megareset.
 - Fornorske ui
 - Player stats calc can improves, instead of doing player by player, do match by match.
+- Add full rating graph
