--- a/doc/TODO
+++ b/doc/TODO
@@ -10,3 +10,4 @@ TODO
 - Fornorske ui
 - Player stats calc can improves, instead of doing player by player, do match by match.
 - Add full rating graph
+- Validate: At least one player must have 0 cards as stats for solitaire.
