Correctly calculates rating for matches with draws.

--- a/doc/TODO
+++ b/doc/TODO
@@ -18,3 +18,4 @@ LOW PRI
 - Verify that filter works on mobile.
 - Fornorske ui
 - Button to make new match with same playerlist.
+- Next match button when viewing matches
