--- a/doc/TODO
+++ b/doc/TODO
@@ -1,14 +1,22 @@
 HIGH PRI
 ---------
-- Make description page for rating calc.
 - Show better text at match list, indicate what players, or how many.
-
+- Calculate last players results automatically.
+- Stats:
+	- Who is averagely best at each type of round.
+	- Highest lowest score achieved ever (not end result, but mid game as well).
+	- Loosing/winning streak.
+	- Can click (view more) to get a full list of the special statses, such as the best game.
+	- How many times someone got min/max in the different types of rounds.
+- Add year to rating x axis.
 LOW PRI
 ---------
+- Make description page for rating calc.
 - Evaluate if i need all the stats calculations in views.py, might reduce calc time by removing unncesseary ones.
 - Fornorske ui
-- Button to make new match with same playerlist.
-- Filter player stats by period,
+- Add Button to make new match with same playerlist.
+- Filter player stats by period.
+- Hytte log, show activity when people have been at the cabin.
 
 PERFORMANCE / INTERNAL SHIT
 -------------------------
