Activty page added

--- a/doc/TODO
+++ b/doc/TODO
@@ -4,8 +4,8 @@ HIGH PRI
 LOW PRI
 ---------
 - Filter player stats by period.
-- Hytte log, show activity when people have been at the cabin.
-- Sort opposite direction at player list.
+- Sørste økning/minkning av rating.
+- Credit / Github link?
 
 PERFORMANCE / INTERNAL SHIT
 -------------------------
