Correct django_compressor css url path + settings cleanup

--- a/doc/TODO
+++ b/doc/TODO
@@ -4,6 +4,7 @@ HIGH PRI
 LOW PRI
 ---------
 - Filter player stats by period.
+- Longest winning/loosing streak.
 
 PERFORMANCE / INTERNAL SHIT
 -------------------------
