Validation of spades for 6,8,9 players changed + minor bugfix

--- a/doc/TODO
+++ b/doc/TODO
@@ -4,6 +4,9 @@ HIGH PRI
 LOW PRI
 ---------
 - Filter player stats by period.
+- List all worst spades, queens games.
+- Filter players list by percentage played.
+- Match list in players page.
 
 PERFORMANCE / INTERNAL SHIT
 -------------------------
