--- a/doc/TODO
+++ b/doc/TODO
@@ -1,6 +1,8 @@
 HIGH PRI
 ---------
 - The rating system awards to much points from games with many players (6+?)
+- Add a monthly permanent backup
+
 LOW PRI
 ---------
 - Filter player stats by period/year.
