--- a/doc/install
+++ b/doc/install
@@ -1,77 +1,11 @@
-GUIDES (SOURCE)
-----------------
-Guide 1 and 2 are loosely followed. Guide 3 and 4 are almost fully followed. 5 are modified and used.
+Install Document (complete)
+----------------------------------------------------------------
+Legend
+	"command" = Command to run in linux window
+	[something] = Needs to be replaced by input, brackets included.
+	{PDIR} = Directory where the project is placed
 
-1. http://chenliangblog.wordpress.com/2011/01/02/some-pointers-on-setting-up-a-basic-django-project-under-ubuntu-10-04-1/
-2. http://www.lennu.net/2012/05/14/django-deployement-installation-to-ubuntu-12-dot-04-server/
-3. http://blog.iiilx.com/programming/how-to-install-postgres-on-ubuntu-for-django/
-4. http://lassebunk.dk/2011/03/16/linux-dropbox-remote-backup/
-5. http://lassebunk.dk/2011/03/11/linux-backup-script/
-
-
-RUN IN SHELL - anywhere
-----------------
-apt-get update
-apt-get upgrade
-apt-get install apache2 python python-django libapache2-mod-wsgi pip postgresql python-psycopg2
-pip install django, django_compress
-
-RUN IN SHELL - at install location
-------------------------------------------------
-Uncertain about exact shit to be done, but git clone, and folder creation has to be done:
-- projectdir/static
-- projectdir/static/CACHE
-- projectdir/static/CACHE/css
-- projectdir/static/CACHE/js
-- some (not js/css) cache folder anywhere.
-- Both cache folders, 777
-- Create config file
-
-Apache 2 virtual host file (/etc/apache2/sites-enabled)
-------------------------------------------------
-<VirtualHost *:20000>
-
-        WSGIScriptAlias /mokstats/ /srv/djangoapps/mokstatsapp/mokstats/wsgi.py
-
-        <Directory /srv/djangoapps/mokstatsapp/mokstats>
-                <Files wsgi.py>
-                Order deny,allow
-                Allow from all
-                </Files>
-        </Directory>
-
-        Alias /mokstats/static/ /srv/djangoapps/mokstatsapp/static/
-
-        <Directory /srv/djangoapps/mokstats/mokstatsapp/static>
-        Order deny,allow
-        Allow from all
-        </Directory>
-
-</VirtualHost>
-
-
-
-Wsgi.py
----------------
-import sys, os
-
-sys.path.insert(0,os.sep.join(os.path.abspath(__file__).split(os.sep)[:-2]))
-
-
-os.environ['DJANGO_SETTINGS_MODULE'] = 'mokstats.settings'
-
-import django.core.handlers.wsgi
-application = django.core.handlers.wsgi.WSGIHandler()
-
-
-
-
-Legend:
-"command" = Command to run in linux window
-[something] = Needs to be replaced by input, brackets included.
-{PDIR} = Directory where the project is placed
-
-0. Update all existing packages (not needed)
+0. Update all existing packages (not neccesary, but adviced)
 	"sudo apt-get update"
 	"sudo apt-get upgrade"
 
@@ -97,25 +31,30 @@ Y. Setup Django Project
 		"mkdir -m 777 {PDIR}/static/CACHE/js"
 	Y.4. Static Content
 		"python {PDIR}/manage.py collectstatic"
+		
 
 X. Setup PostgreSQL
 	2.1. Change postgres password: "sudo passwd postgres"
-	2.2. Create project database user: "sudo -u postgres createuser -P [dbuser]", No Superuser, No database creation, No role creation
+	2.2. Create project database user: "sudo -u postgres createuser -P [dbuser]", No privliges
 	2.3. Create database
 		"su postgres"
 		"psql template1"
 		"CREATE DATABASE [dbname] OWNER [dbuser] ENCODING 'UTF8'; "
 		"\q"
-		"/etc/init.d/postgresql restart"
-	2.4. Update {PDIR}/mokstats/settings.py with database setttings.
+		"/etc/init.d/postgresql restart" (Expect errors)
+	2.4. Update {PDIR}/mokstats/settings.py with database settings.
+	
+?. Populate database
+	?.A. Fresh Install
+		"python {PDIR}/manage.py syncdb"
+		"python {PDIR}/setup.py"
+	?.B. Restore database from backup/dump
+		- Get dump file
+		- "pg_restore -d mokstatsdb --role=mokstats [dumpfile]"
 
 B. Setup Dropbox Backup
 	B.1. Install dropbox, https://www.dropbox.com/install?os=lnx
-
-R. Restore database from backup
-	R.1. Get dump file
-	R.2. "pg_restore -d mokstatsdb --role=mokstats [dumpfile]"
-
+	
 A. Setup Apache 2
 	A.1. "touch /etc/apache2/sites-enabled/mokstats"
 	A.2. Copy content of {PDIR}/doc/apache-site-file to created file.
@@ -125,3 +64,13 @@ A. Setup Apache 2
 	A.X. Add used port to /etc/apache2/ports.conf
 	A.X. "service apache2 restart"
 	
+	
+Source guides this install document has been inspired by
+----------------------------------------------------------------
+Guide 1 and 2 are loosely followed. Guide 3 and 4 are almost fully followed. 5 are modified and used.
+
+1. http://chenliangblog.wordpress.com/2011/01/02/some-pointers-on-setting-up-a-basic-django-project-under-ubuntu-10-04-1/
+2. http://www.lennu.net/2012/05/14/django-deployement-installation-to-ubuntu-12-dot-04-server/
+3. http://blog.iiilx.com/programming/how-to-install-postgres-on-ubuntu-for-django/
+4. http://lassebunk.dk/2011/03/16/linux-dropbox-remote-backup/
+5. http://lassebunk.dk/2011/03/11/linux-backup-script/
