--- a/doc/install
+++ b/doc/install
@@ -12,57 +12,71 @@ Legend
 1. Install project packages
 	"sudo apt-get install apache2 python python-django libapache2-mod-wsgi python-pip postgresql python-psycopg2 git"
 	"sudo pip install django==1.5.1, django_compressor"
-X. Download project from GitHub
-	X.1. GitHub Profile SSH Key: https://help.github.com/articles/generating-ssh-keys
-	X.2. cd to django apps parent folder
-	X.3 "git clone git@github.com:Andrioden/MokStats.git"
+2. Download project from GitHub
+	2.1. GitHub Profile SSH Key: https://help.github.com/articles/generating-ssh-keys
+	2.2. cd to django apps parent folder
+	2.3 "git clone git@github.com:Andrioden/MokStats.git"
 
-Y. Setup Django Project
-	Y.1. Settings
+3. Setup Django Project
+	3.1. Settings
 		"cp {PDIR}/mokstats/settings_example.py {PDIR}/mokstats/settings.py"
 		Edit part 1 of settings.py "nano {PDIR}/mokstats/settings.py"
 		Create cache directory "mkdir -m 777 /tmp/[dir]"
-	Y.2. WSGI
+	3.2. WSGI
 		"cp {PDIR}/mokstats/wsgi_example.py {PDIR}/mokstats/wsgi.py"
-	Y.3. Cache directories
+	3.3. Cache directories
 		"mkdir {PDIR}/static"
 		"mkdir -m 777 {PDIR}/static/CACHE"
 		"mkdir -m 777 {PDIR}/static/CACHE/css"
 		"mkdir -m 777 {PDIR}/static/CACHE/js"
-	Y.4. Static Content
+	3.4. Static Content
 		"python {PDIR}/manage.py collectstatic"
 		
-
-X. Setup PostgreSQL
-	2.1. Change postgres password: "sudo passwd postgres"
-	2.2. Create project database user: "sudo -u postgres createuser -P [dbuser]", No privliges
-	2.3. Create database
+4. Setup PostgreSQL
+	4.1. Change postgres password: "sudo passwd postgres"
+	4.2. Create project database user: "sudo -u postgres createuser -P [dbuser]", No privliges
+	4.3. Create database
 		"su postgres"
 		"psql template1"
 		"CREATE DATABASE [dbname] OWNER [dbuser] ENCODING 'UTF8'; "
 		"\q"
 		"/etc/init.d/postgresql restart" (Expect errors)
-	2.4. Update {PDIR}/mokstats/settings.py with database settings.
-	
-?. Populate database
-	?.A. Fresh Install
+	4.4. Update {PDIR}/mokstats/settings.py with database settings.
+
+5. Setup Dropbox Backup
+	5.1. Follow the guides
+		A modified version of the backup script can be
+		found under /doc, and the correct database settings needs to be edited in it.
+		http://lassebunk.dk/2011/03/16/linux-dropbox-remote-backup/
+		http://lassebunk.dk/2011/03/11/linux-backup-script/
+	5.2. PostgreSql password file
+		Add .pgpass file to root home, http://www.postgresql.org/docs/current/static/libpq-pgpass.html
+	5.3. Cronjob
+		"cronjob -e" and add
+		0 0 * * * sh /root/Dropbox/mokstats/backup.sh -d /root/Dropbox/mokstats/backup/daily
+		0 0 1 * * sh /root/Dropbox/mokstats/backup.sh -d /root/Dropbox/mokstats/backup/monthly
+
+6. Populate database
+	6.A. Fresh Install
 		"python {PDIR}/manage.py syncdb"
 		"python {PDIR}/setup.py"
-	?.B. Restore database from backup/dump
+	6.B. Restore database from backup/dump
 		- Get dump file
 		- "pg_restore -d mokstatsdb --role=mokstats [dumpfile]"
-
-B. Setup Dropbox Backup
-	B.1. Install dropbox, https://www.dropbox.com/install?os=lnx
-	
-A. Setup Apache 2
-	A.1. "touch /etc/apache2/sites-enabled/mokstats"
-	A.2. Copy content of {PDIR}/doc/apache-site-file to created file.
-	A.3. Edit content to fit newly created project.
-	Maybe: "hostname [hostname]"
-	A.X. Enable wsgi mod: "a2enmod wsgi"
-	A.X. Add used port to /etc/apache2/ports.conf
-	A.X. "service apache2 restart"
+		
+7. Setup Apache 2
+	7.1 Add and enable site
+		"touch /etc/apache2/sites-available/mokstats"
+		Copy content of {PDIR}/doc/apache-site-file to created file.
+		Edit paths to fit newly created project.
+		Add used port to /etc/apache2/ports.conf
+		"a2enablesite mokstats"
+	7.2 Change server hostname
+		Possible have to set the server hostname; "hostname [hostname]"
+	7.3 Enable WSGI Mod
+		"a2enmod wsgi"
+	7.4 Apply changes
+		"service apache2 restart"
 	
 	
 Source guides this install document has been inspired by
