jqplot upgraded, match size stats, ++
- Jquery updated to 2.1.1 and Jqplot upgraded to support this.
- Sort buttons in matches list now has colors again.
- Added new stats page: can view biggest matches by player count.
- Biggest match now correctly rounded to 1 decimal instead of 0
decimals.
- minor stuff++

--- a/doc/TODO
+++ b/doc/TODO
@@ -1,12 +1,8 @@
 HIGH PRI
 ------------------
-- Støtt nyeste jquery, jquery plot failer som fan.
-
-- Liste over kamper med flest spillere.
-- dobbeltsjekk at gjennomsnitt på total score faktisk er float utregnet.
-- Fikse selection av sortering, før var det grønt/rødt, nå fungerer det ikke.
 - bruk piltaster til å flytt frem og tilbake
 - Tittel i browser viser ikke møkkis stats.
+- investigate top-rounds in urls, is it used??
 
 LOW PRI
 ------------------
