--- a/doc/install
+++ b/doc/install
@@ -62,6 +62,10 @@ Legend
 		"crontab -e" and add
 		0 0 * * * sh /root/Dropbox/mokstats/backup.sh -d /root/Dropbox/mokstats/backup/daily
 		0 0 1 * * sh /root/Dropbox/mokstats/backup.sh -d /root/Dropbox/mokstats/backup/monthly
+	5.4 Make sure dropbox always runs on startup
+		Need new solution for this,
+		think i managed to run the apt-get dropbox shit
+			sudo python /root/dropbox-cli/dropbox.py start
 
 6. Populate database
 	6.A. Fresh Install
